--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,11 @@
         "wp-cli/wp-cli": "^2.12"
     },
     "require-dev": {
-        "wp-cli/wp-cli-tests": "^5",
-        "phpunit/phpunit": "^11.0 || ^12.0"
+        "phpunit/phpunit": "^11.0 || ^12.0",
+        "wp-cli/entity-command": "^2",
+        "wp-cli/extension-command": "^2",
+        "wp-cli/media-command": "^2",
+        "wp-cli/wp-cli-tests": "^5"
     },
     "config": {
         "process-timeout": 7200,
@@ -23,7 +26,8 @@
     },
     "extra": {
         "commands": [
-            "media find-orphans"
+            "media find-orphans",
+            "media remove-orphans"
         ]
     },
     "autoload": {
